namespaces/live.cloud-platform.service.justice.gov.uk/create-and-vary-a-licence-test1/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: create-and-vary-a-licence-test1
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "create-and-vary-a-licence"
    cloud-platform.justice.gov.uk/slack-alert-channel: "create-and-vary-a-licence"
    cloud-platform.justice.gov.uk/application: "Create and vary a licence"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/create-and-vary-a-licence.git"
    cloud-platform.justice.gov.uk/team-name: "create-and-vary-a-licence-devs"
